# multi-agent-research-workspace

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260701_0001_create_research_tables.py  20260702_0002_add_source_review_status.py
app/: __init__.py  main.py
app/api/: health.py  research.py
app/core/: config.py
app/db/: models.py  session.py
app/research/: __init__.py  brief.py  credibility.py  models.py  store.py
docs/: system-design.md
tests/: conftest.py  test_brief.py  test_credibility.py  test_health.py  test_research_api.py  test_research_store.py
